Update image repository references to use guslopezc instead of gusLopezC07 in CI/CD workflow, Helm chart values, and Kubernetes deployment configuration

--- a/python-app/template/k8s/deploy.yaml
+++ b/python-app/template/k8s/deploy.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: python-app
-        image: gusLopezC07/python-app:v2
+        image: guslopezc/python-app:v2
         ports:
         - containerPort: 5000
