--- a/python-app/template/.github/workflows/${{values.app_name}}-cicd.yaml
+++ b/python-app/template/.github/workflows/${{values.app_name}}-cicd.yaml
@@ -28,7 +28,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: gusLopezC07/${{values.app_name}}:${{ '${{ env.COMMIT_ID }}' }}
+          tags: guslopezc/${{values.app_name}}:${{ '${{ env.COMMIT_ID }}' }}
     outputs:
       commit_id: ${{ '${{ env.COMMIT_ID }}' }}
 
